--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YTS Finder</title>
-    <link rel="stylesheet" href="./default.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/default.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div id="root"></div>
